# cargo-rls-install

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  RELEASE.md  appveyor.yml  latest.txt  run.py
examples/: check_all_missing.rs  iter_zip.rs  lazy_static.rs  rustup.rs  windows_path_divide.rs
src/: cargo_home.rs  commands.rs  global.rs  global_test.rs  lib.rs  local_env.rs  main.rs  main_test.rs  options.rs  options_test.rs  own_dir.rs  owndir.rs  owndir_test.rs  rustup.rs  scraping.rs  scraping_test.rs
tests/: chrono_test.rs  global_test.rs  main_test.rs  options_test.rs  owndir_test.rs  scraping_test.rs  test.rs
tests/read_test/html/: x86_64-pc-windows-msvc.html
tests/read_test/text/: latest.txt
