[package]
name = "cargo-rls-install"
version = "2.0.6"
authors = ["s4i"]
edition = "2018"
license = "MIT"
description = "Rust Language Server easy install"
homepage = "https://crates.io/crates/cargo-rls-install"
repository = "https://github.com/s4i/cargo-rls-install"
readme = "README.md"
keywords = ["cli", "cargo", "subcommand", "rls", "language-server"]
include = ["/Cargo.toml", "/LICENSE", "/README.md", "/RELEASE.md", "/src/*.rs"]

[dependencies]
ureq = "1.3.0"
regex = "1.3.9"
select = "0.5.0"
structopt = "0.3.16"
failure = "0.1.8"

[lib]
name = "cargo_rls_install"
path = "src/lib.rs"

[[bin]]
name = "cargo-rls-install"
path = "src/main.rs"
test = false
doc = false

[badges.travis-ci]
repository = "s4i/cargo-rls-install"
branch = "master"

[badges.appveyor]
service = "github"
repository = "s4i/cargo-rls-install"
branch = "master"
